# coven-code

./: .gitignore  AGENTS.md  ATTRIBUTION.md  CLAUDE.md  COVEN.md  README.md  SESSION_NOTES.md  index.html  install.ps1  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-release.yml  npm-publish.yml  pages.yml  patch-release.yml  release.yml  rust-ci.yml  tui-tests.yml
docs/: .gitignore  AUDIT-2026-06.md  SECURITY_PERF_AUDIT.md  advanced.md  agents.md  auth.md  commands.md  configuration.md  coven-runtimes.md  familiars.md  headless-contract.md  hooks.md  index.html  index.md  installation.md  keybindings.md  marketplace.md  mcp.md  package-lock.json  package.json  plugins.md  providers.md  tools.md  tui-ux-accessibility-review.md  unification.md  vercel.json  wrangler.json
docs/shared/: githubStars.js  hosted-review-phase-1-pr.md  hosted-review-phase-2-pr.md  hosted-review-phase-3-pr.md  hosted-review-phase-4-pr.md  hosted-review-phase-5-pr.md
docs/src/: code-highlight.js  demos.js  hero.js  index.html  main.js  palette-data.js  palette.js  sidebar.js  style.css
docs/src/content/: advanced.js  agents.js  auth.js  commands.js  configuration.js  familiars.js  getting-started.js  hooks.js  index.js  installation.js  introduction.js  keybindings.js  mcp.js  plugins.js  providers.js  tools.js  welcome-screen.js
docs/superpowers/plans/: 2026-06-08-roster-agent-familiar-merge-safety.md  2026-06-10-issue-59-remainder.md  2026-07-12-coven-cli-unification.md  2026-07-12-phase3-engine-harness.md  2026-07-12-phase4-state-unification.md  2026-07-14-phase5-brand-sweep.md  (+1 more)
docs/worker/: index.ts
marketplace/: catalog.json  marketplace.json
npm/: README.md  install.js  package.json
scripts/: append-patch-note.py  bump-version.py  familiar-contract-docs.test.mjs  mascot-rebrand.test.mjs  prepare-npm-package.mjs  prepare-npm-package.test.mjs  regen-release-notes.py  sync-marketplace.py
scripts/tui-tests/: README.md  lib.sh  run.sh
session/: index.html
spec/: 13_rust_codebase.md  INDEX.md
spec/runtime-manifest/: coven-code.json
src-rust/: Cargo.toml
src-rust/crates/bridge/: Cargo.toml
src-rust/crates/bridge/src/: lib.rs
src-rust/crates/query/: Cargo.toml
src-rust/crates/query/src/: agent_tool.rs  auto_dream.rs  compact.rs  coordinator.rs  lib.rs  session_memory.rs  skill_prefetch.rs
src-rust/crates/tools/: Cargo.toml
src-rust/crates/tools/src/: bash.rs  bundled_skills.rs  config_tool.rs  cron.rs  glob_tool.rs  grep_tool.rs  lib.rs  remote_trigger.rs  repl_tool.rs  skill_tool.rs  team_tool.rs  todo_write.rs  tool_search.rs  web_fetch.rs  web_search.rs  worktree.rs
(+198 files in other folders)
